# meta-packager

./: .pre-commit-config.yaml  README.md  packages.toml  pyproject.toml  ruff.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
meta_packager/: jinja.py  main.py
meta_packager/templates/: PKGBUILD.j2
tests/: test_jinja.py
